# grok_reg

./: .dockerignore  .env.docker.example  .gitattributes  .gitignore  DOCKER.md  Dockerfile  README.md  config.example.json  cpa_export.py  cpa_to_sub2api.py  docker-compose.yml  grok2api_import.py  grok_register_ttk.py  pyproject.toml  register_cli.py
.github/workflows/: docker-image.yml
cpa_xai/: __init__.py  accounts.py  browser_confirm.py  local_turnstile.py  mint.py  oauth_device.py  probe.py  sso_http.py
docker/: entrypoint.sh  start-display.sh
scripts/: backfill_cpa_xai_from_accounts.py  import_to_grok2api.py  probe_cpa_pool.py  sso2cpa_http.py
turnstilePatch/: content.js  manifest.json
web/: app.py
web/static/: app.js  style.css
web/templates/: index.html  login.html
