[project]
name = "grok-reg"
version = "1.0.0"
description = "Grok account registrar with Web dashboard and CPA export"
requires-python = ">=3.13,<3.14"
dependencies = [
    "DrissionPage>=4.1",
    "curl_cffi>=0.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "pydantic>=2.0",
    "websockets>=13.0",
]

# application 模式：不构建 wheel，uv 只管依赖
[tool.uv]
package = false
